switch between reload and cancel, better tab title refresh

--- a/Vienna/Sources/Main window/BrowserTab.xib
+++ b/Vienna/Sources/Main window/BrowserTab.xib
@@ -12,25 +12,27 @@
                 <outlet property="addressBarPaddingView" destination="OdK-ur-PPi" id="NyC-QN-c8t"/>
                 <outlet property="addressField" destination="hfe-el-NfG" id="Sfl-fz-aCb"/>
                 <outlet property="backButton" destination="0rn-z0-yA2" id="1VR-2q-DKI"/>
+                <outlet property="cancelButtonWidth" destination="ygQ-pL-IEG" id="vFC-7u-8Mf"/>
                 <outlet property="forwardButton" destination="aeH-Zd-eUj" id="gg6-8U-WAD"/>
                 <outlet property="reloadButton" destination="u6u-kW-eOW" id="Dtw-No-iAz"/>
+                <outlet property="reloadButtonWidth" destination="iqg-Hq-m7A" id="JZy-Lw-poZ"/>
                 <outlet property="view" destination="Hz6-mo-xeY" id="0bl-1N-x8E"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="Hz6-mo-xeY">
-            <rect key="frame" x="0.0" y="0.0" width="655" height="272"/>
+            <rect key="frame" x="0.0" y="0.0" width="763" height="272"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <customView translatesAutoresizingMaskIntoConstraints="NO" id="OdK-ur-PPi">
-                    <rect key="frame" x="0.0" y="242" width="655" height="30"/>
+                    <rect key="frame" x="0.0" y="242" width="763" height="30"/>
                     <subviews>
                         <stackView distribution="fill" orientation="horizontal" alignment="centerY" spacing="3" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" horizontalHuggingPriority="255" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="755" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OeK-Vl-Vdl">
-                            <rect key="frame" x="5" y="5" width="645" height="20"/>
+                            <rect key="frame" x="5" y="5" width="753" height="20"/>
                             <subviews>
                                 <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="0rn-z0-yA2">
-                                    <rect key="frame" x="0.0" y="4" width="20" height="12"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="20" id="HLA-5B-V5x"/>
                                     </constraints>
@@ -43,7 +45,7 @@
                                     </connections>
                                 </button>
                                 <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="aeH-Zd-eUj">
-                                    <rect key="frame" x="23" y="4" width="20" height="12"/>
+                                    <rect key="frame" x="23" y="0.0" width="20" height="20"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="20" id="Qpb-UX-zNR"/>
                                     </constraints>
@@ -56,7 +58,10 @@
                                     </connections>
                                 </button>
                                 <textField horizontalHuggingPriority="200" verticalHuggingPriority="750" horizontalCompressionResistancePriority="700" translatesAutoresizingMaskIntoConstraints="NO" id="hfe-el-NfG">
-                                    <rect key="frame" x="46" y="0.0" width="576" height="20"/>
+                                    <rect key="frame" x="46" y="0.0" width="641" height="20"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="20" id="cth-7a-7OT"/>
+                                    </constraints>
                                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" borderStyle="border" drawsBackground="YES" id="jDD-sF-hKH">
                                         <font key="font" usesAppearanceFont="YES"/>
                                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -66,10 +71,23 @@
                                         <action selector="loadPageFromAddressBar:" target="-2" id="kJy-ZN-1TI"/>
                                     </connections>
                                 </textField>
-                                <button verticalHuggingPriority="751" translatesAutoresizingMaskIntoConstraints="NO" id="u6u-kW-eOW">
-                                    <rect key="frame" x="625" y="3" width="20" height="15"/>
+                                <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="oDE-XG-Zic">
+                                    <rect key="frame" x="690" y="0.0" width="30" height="20"/>
                                     <constraints>
-                                        <constraint firstAttribute="width" constant="20" id="iqg-Hq-m7A"/>
+                                        <constraint firstAttribute="width" constant="30" id="ygQ-pL-IEG"/>
+                                    </constraints>
+                                    <buttonCell key="cell" type="recessed" bezelStyle="recessed" image="NSStopProgressTemplate" imagePosition="only" alignment="center" state="on" imageScaling="proportionallyDown" inset="2" id="Qgx-sg-FMt">
+                                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
+                                        <font key="font" metaFont="systemBold" size="12"/>
+                                    </buttonCell>
+                                    <connections>
+                                        <action selector="cancel:" target="-2" id="xV7-bl-DAX"/>
+                                    </connections>
+                                </button>
+                                <button verticalHuggingPriority="751" translatesAutoresizingMaskIntoConstraints="NO" id="u6u-kW-eOW">
+                                    <rect key="frame" x="723" y="0.0" width="30" height="20"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="30" id="iqg-Hq-m7A"/>
                                     </constraints>
                                     <buttonCell key="cell" type="recessed" bezelStyle="recessed" image="NSRefreshTemplate" imagePosition="only" alignment="center" imageScaling="proportionallyDown" inset="2" id="RBR-fu-w5E">
                                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
@@ -80,13 +98,21 @@
                                     </connections>
                                 </button>
                             </subviews>
+                            <constraints>
+                                <constraint firstItem="hfe-el-NfG" firstAttribute="height" secondItem="0rn-z0-yA2" secondAttribute="height" id="1v0-LE-s3O"/>
+                                <constraint firstItem="u6u-kW-eOW" firstAttribute="height" secondItem="0rn-z0-yA2" secondAttribute="height" id="PPv-nZ-S4F"/>
+                                <constraint firstItem="aeH-Zd-eUj" firstAttribute="height" secondItem="0rn-z0-yA2" secondAttribute="height" id="bRg-lJ-7bh"/>
+                                <constraint firstItem="oDE-XG-Zic" firstAttribute="height" secondItem="0rn-z0-yA2" secondAttribute="height" id="dg9-r8-9jZ"/>
+                            </constraints>
                             <visibilityPriorities>
+                                <integer value="1000"/>
                                 <integer value="1000"/>
                                 <integer value="1000"/>
                                 <integer value="1000"/>
                                 <integer value="1000"/>
                             </visibilityPriorities>
                             <customSpacing>
+                                <real value="3.4028234663852886e+38"/>
                                 <real value="3.4028234663852886e+38"/>
                                 <real value="3.4028234663852886e+38"/>
                                 <real value="3.4028234663852886e+38"/>
@@ -114,5 +140,6 @@
         <image name="NSGoBackTemplate" width="9" height="12"/>
         <image name="NSGoForwardTemplate" width="9" height="12"/>
         <image name="NSRefreshTemplate" width="11" height="15"/>
+        <image name="NSStopProgressTemplate" width="11" height="11"/>
     </resources>
 </document>
