implement RSS button for new browser, improve overall structure

--- a/Vienna/Sources/Main window/BrowserTab.xib
+++ b/Vienna/Sources/Main window/BrowserTab.xib
@@ -16,20 +16,21 @@
                 <outlet property="forwardButton" destination="aeH-Zd-eUj" id="gg6-8U-WAD"/>
                 <outlet property="reloadButton" destination="u6u-kW-eOW" id="Dtw-No-iAz"/>
                 <outlet property="reloadButtonWidth" destination="iqg-Hq-m7A" id="JZy-Lw-poZ"/>
+                <outlet property="rssButtonWidth" destination="0NG-eP-ikc" id="llD-6m-I4I"/>
                 <outlet property="view" destination="Hz6-mo-xeY" id="0bl-1N-x8E"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="Hz6-mo-xeY">
-            <rect key="frame" x="0.0" y="0.0" width="763" height="272"/>
+            <rect key="frame" x="0.0" y="0.0" width="839" height="272"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <customView translatesAutoresizingMaskIntoConstraints="NO" id="OdK-ur-PPi">
-                    <rect key="frame" x="0.0" y="242" width="763" height="30"/>
+                    <rect key="frame" x="0.0" y="242" width="839" height="30"/>
                     <subviews>
                         <stackView distribution="fill" orientation="horizontal" alignment="centerY" spacing="3" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" horizontalHuggingPriority="255" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="755" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OeK-Vl-Vdl">
-                            <rect key="frame" x="5" y="5" width="753" height="20"/>
+                            <rect key="frame" x="5" y="5" width="829" height="20"/>
                             <subviews>
                                 <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="0rn-z0-yA2">
                                     <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
@@ -58,7 +59,7 @@
                                     </connections>
                                 </button>
                                 <textField horizontalHuggingPriority="200" verticalHuggingPriority="750" horizontalCompressionResistancePriority="700" translatesAutoresizingMaskIntoConstraints="NO" id="hfe-el-NfG">
-                                    <rect key="frame" x="46" y="0.0" width="641" height="20"/>
+                                    <rect key="frame" x="46" y="0.0" width="675" height="20"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="20" id="cth-7a-7OT"/>
                                     </constraints>
@@ -71,8 +72,21 @@
                                         <action selector="loadPageFromAddressBar:" target="-2" id="kJy-ZN-1TI"/>
                                     </connections>
                                 </textField>
+                                <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="DXZ-Cm-yVX">
+                                    <rect key="frame" x="724" y="0.0" width="39" height="19"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="39" id="0NG-eP-ikc"/>
+                                    </constraints>
+                                    <buttonCell key="cell" type="recessed" title="RSS" bezelStyle="recessed" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="R1b-bS-RKk">
+                                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
+                                        <font key="font" metaFont="systemBold" size="12"/>
+                                    </buttonCell>
+                                    <connections>
+                                        <action selector="subscribe:" target="-2" id="4re-XI-zfu"/>
+                                    </connections>
+                                </button>
                                 <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="oDE-XG-Zic">
-                                    <rect key="frame" x="690" y="0.0" width="30" height="20"/>
+                                    <rect key="frame" x="766" y="0.0" width="30" height="20"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="30" id="ygQ-pL-IEG"/>
                                     </constraints>
@@ -85,7 +99,7 @@
                                     </connections>
                                 </button>
                                 <button verticalHuggingPriority="751" translatesAutoresizingMaskIntoConstraints="NO" id="u6u-kW-eOW">
-                                    <rect key="frame" x="723" y="0.0" width="30" height="20"/>
+                                    <rect key="frame" x="799" y="0.0" width="30" height="20"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="30" id="iqg-Hq-m7A"/>
                                     </constraints>
@@ -103,6 +117,7 @@
                                 <constraint firstItem="u6u-kW-eOW" firstAttribute="height" secondItem="0rn-z0-yA2" secondAttribute="height" id="PPv-nZ-S4F"/>
                                 <constraint firstItem="aeH-Zd-eUj" firstAttribute="height" secondItem="0rn-z0-yA2" secondAttribute="height" id="bRg-lJ-7bh"/>
                                 <constraint firstItem="oDE-XG-Zic" firstAttribute="height" secondItem="0rn-z0-yA2" secondAttribute="height" id="dg9-r8-9jZ"/>
+                                <constraint firstItem="0rn-z0-yA2" firstAttribute="height" secondItem="DXZ-Cm-yVX" secondAttribute="height" multiplier="1.11111" id="rWo-ME-1cZ"/>
                             </constraints>
                             <visibilityPriorities>
                                 <integer value="1000"/>
@@ -110,8 +125,10 @@
                                 <integer value="1000"/>
                                 <integer value="1000"/>
                                 <integer value="1000"/>
+                                <integer value="1000"/>
                             </visibilityPriorities>
                             <customSpacing>
+                                <real value="3.4028234663852886e+38"/>
                                 <real value="3.4028234663852886e+38"/>
                                 <real value="3.4028234663852886e+38"/>
                                 <real value="3.4028234663852886e+38"/>
