--- a/Vienna/Sources/Main window/BrowserTabBeforeMacOS12.xib
+++ b/Vienna/Sources/Main window/BrowserTabBeforeMacOS12.xib
@@ -16,20 +16,21 @@
                 <outlet property="forwardButton" destination="aeH-Zd-eUj" id="gg6-8U-WAD"/>
                 <outlet property="reloadButton" destination="u6u-kW-eOW" id="Dtw-No-iAz"/>
                 <outlet property="reloadButtonWidth" destination="u7N-Cm-8cB" id="F6m-jO-H0P"/>
+                <outlet property="rssButtonWidth" destination="PoN-9V-QZr" id="yuO-tM-FGE"/>
                 <outlet property="view" destination="Hz6-mo-xeY" id="0bl-1N-x8E"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="Hz6-mo-xeY">
-            <rect key="frame" x="0.0" y="0.0" width="762" height="272"/>
+            <rect key="frame" x="0.0" y="0.0" width="850" height="272"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <customView translatesAutoresizingMaskIntoConstraints="NO" id="OdK-ur-PPi">
-                    <rect key="frame" x="0.0" y="241" width="762" height="31"/>
+                    <rect key="frame" x="0.0" y="241" width="850" height="31"/>
                     <subviews>
                         <stackView distribution="fill" orientation="horizontal" alignment="centerY" spacing="0.0" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" horizontalHuggingPriority="255" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="755" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OeK-Vl-Vdl">
-                            <rect key="frame" x="5" y="5" width="752" height="21"/>
+                            <rect key="frame" x="5" y="5" width="840" height="21"/>
                             <subviews>
                                 <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="0rn-z0-yA2">
                                     <rect key="frame" x="0.0" y="0.0" width="29" height="21"/>
@@ -52,7 +53,7 @@
                                     </connections>
                                 </button>
                                 <textField horizontalHuggingPriority="200" verticalHuggingPriority="750" horizontalCompressionResistancePriority="700" translatesAutoresizingMaskIntoConstraints="NO" id="hfe-el-NfG">
-                                    <rect key="frame" x="56" y="0.0" width="638" height="21"/>
+                                    <rect key="frame" x="56" y="0.0" width="686" height="21"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="21" id="76y-gh-8oJ"/>
                                     </constraints>
@@ -66,7 +67,7 @@
                                     </connections>
                                 </textField>
                                 <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="m2a-jT-Jm2">
-                                    <rect key="frame" x="694" y="0.0" width="29" height="21"/>
+                                    <rect key="frame" x="742" y="0.0" width="29" height="21"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="29" id="yiE-mL-DVV"/>
                                     </constraints>
@@ -79,11 +80,11 @@
                                     </connections>
                                 </button>
                                 <button verticalHuggingPriority="751" translatesAutoresizingMaskIntoConstraints="NO" id="u6u-kW-eOW">
-                                    <rect key="frame" x="723" y="0.0" width="29" height="21"/>
+                                    <rect key="frame" x="771" y="0.0" width="29" height="21"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="29" id="u7N-Cm-8cB"/>
                                     </constraints>
-                                    <buttonCell key="cell" type="recessed" bezelStyle="recessed" image="browserRefreshButton" imagePosition="only" alignment="center" imageScaling="proportionallyDown" inset="2" id="RBR-fu-w5E">
+                                    <buttonCell key="cell" type="recessed" bezelStyle="recessed" image="browserRefreshButton" imagePosition="only" alignment="center" inset="2" id="RBR-fu-w5E">
                                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
                                         <font key="font" metaFont="systemBold" size="12"/>
                                     </buttonCell>
@@ -91,8 +92,22 @@
                                         <action selector="reload:" target="-2" id="fgH-tf-FM6"/>
                                     </connections>
                                 </button>
+                                <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="KeR-ow-lja">
+                                    <rect key="frame" x="800" y="0.0" width="40" height="21"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="40" id="PoN-9V-QZr"/>
+                                    </constraints>
+                                    <buttonCell key="cell" type="inline" bezelStyle="inline" image="browserRSSButton" imagePosition="overlaps" alignment="center" state="on" borderStyle="border" inset="2" id="6e4-Mb-AuA">
+                                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                        <font key="font" metaFont="smallSystemBold"/>
+                                        <connections>
+                                            <action selector="subscribe:" target="-2" id="XdL-4d-wEL"/>
+                                        </connections>
+                                    </buttonCell>
+                                </button>
                             </subviews>
                             <constraints>
+                                <constraint firstItem="KeR-ow-lja" firstAttribute="height" secondItem="0rn-z0-yA2" secondAttribute="height" id="GT7-HR-H1Y"/>
                                 <constraint firstItem="hfe-el-NfG" firstAttribute="height" secondItem="0rn-z0-yA2" secondAttribute="height" id="QaY-4u-pTO"/>
                                 <constraint firstItem="u6u-kW-eOW" firstAttribute="height" secondItem="0rn-z0-yA2" secondAttribute="height" id="cyw-WC-oSV"/>
                                 <constraint firstItem="aeH-Zd-eUj" firstAttribute="height" secondItem="0rn-z0-yA2" secondAttribute="height" id="fkS-oa-yUe"/>
@@ -104,8 +119,10 @@
                                 <integer value="1000"/>
                                 <integer value="1000"/>
                                 <integer value="1000"/>
+                                <integer value="1000"/>
                             </visibilityPriorities>
                             <customSpacing>
+                                <real value="3.4028234663852886e+38"/>
                                 <real value="3.4028234663852886e+38"/>
                                 <real value="3.4028234663852886e+38"/>
                                 <real value="3.4028234663852886e+38"/>
@@ -134,6 +151,7 @@
         <image name="CancelTemplate" width="12" height="12"/>
         <image name="browserNextButton" width="27" height="21"/>
         <image name="browserPreviousButton" width="29" height="21"/>
+        <image name="browserRSSButton" width="31" height="21"/>
         <image name="browserRefreshButton" width="29" height="21"/>
     </resources>
 </document>
